# reval

./: .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  AWS_SUBMISSION.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: cross-repo-collector-tests.yml  evals.yml  test.yml
docs/concepts/: methodology.md  rubrics.md  test-cases.md
docs/getting-started/: _section.yaml  first-eval.md  install.md  viewing-reports.md
docs/reference/: _section.yaml  cli.md  config.md  providers.md
docs/roadmap/: _section.yaml  upcoming.md
evals/: config.yaml  schema.json
evals/datasets/india/: argumentation_parity.jsonl  factual_accuracy.jsonl  figure_treatment.jsonl  issue_framing.jsonl  policy_attribution.jsonl
evals/datasets/us/: argumentation_parity.jsonl  factual_accuracy.jsonl  figure_treatment.jsonl  issue_framing.jsonl  policy_attribution.jsonl
evals/rubrics/: figure_treatment.yaml  issue_framing.yaml
evaluations/: __init__.py  conftest.py  eval_benchmark_run.py  eval_factual_accuracy.py  eval_figure_treatment.py  eval_judge.py  eval_providers.py
scripts/: cloudflare-build.sh  run_mock_benchmark.py  validate_dataset.py
showcase/: amazon_nova_pro_v_1_0_20260318_093036.html
showcase/MiniMax-M2_7_20260416_182403/: report.html  report.md  results.json
showcase/amazon_nova-pro-v1_0_20260318_204637/: report.html  report.md  results.json
showcase/claude-opus-4-20250514_20260415_225359/: report.html  report.md  results.json
showcase/claude-opus-4-6_20260416_100533/: report.html  report.md  results.json
showcase/claude-sonnet-4-6_20260416_155637/: report.html  report.md  results.json
showcase/gpt-5_4-mini_20260416_075359/: report.html  report.md  results.json
showcase/gpt-5_4_20260415_235710/: report.html  report.md  results.json
src/reval/: __init__.py  cli.py  config.py  report.py  runner.py  validate.py
src/reval/contracts/: __init__.py  manifest.py  models.py  provider.py
src/reval/leaderboard/: __init__.py  build.py  docs.py
src/reval/leaderboard/assets/: docs.css  radar.js  sort.js  style.css  tokens.css
src/reval/leaderboard/templates/: base.html.j2  docs_base.html.j2  docs_index.html.j2  docs_page.html.j2  index.html.j2  model.html.j2
src/reval/models/: __init__.py  eval.py
src/reval/providers/: __init__.py  anthropic_direct.py  bedrock.py  factory.py  minimax.py  ollama.py  openai_compat.py
src/reval/scoring/: __init__.py  judge.py  parity.py  rubric.py  similarity.py
src/reval/utils/: __init__.py  bedrock.py  embeddings.py
tests/: conftest.py  test_bedrock.py  test_cli.py  test_config.py  test_contracts_imports.py  test_datasets.py  test_docs_build.py  test_embeddings.py  test_leaderboard_build.py  test_manifest_helpers.py  test_models.py  test_provider_anthropic.py  test_provider_minimax.py  test_provider_ollama.py  test_provider_openai.py  test_providers.py  test_report.py  test_runner.py  test_scoring.py  test_validate.py
tests/fixtures/: __init__.py  benchmark_run.py
tests/ui/: conftest.py  test_charts.py  test_docs_tab.py  test_leaderboard_index.py  test_leaderboard_model.py  test_per_run_report.py
